# HoudiniUsdBridge

./: .gitignore  CMakeLists.txt  package.py
cmake/: FindUSD.cmake
src/: CMakeLists.txt
